--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
 						<div id="container23" class="container-component instance-23 default full screen">
 							<div class="wrapper">
 								<div class="inner">
-									<form enctype="multipart/form-data" id="form02" method="post" action="#addtopost" class="form-component instance-2">
+									<form enctype="multipart/form-data" id="form02" method="post" action="#" class="form-component instance-2">
 										<div class="inner">
 											<div class="field" data-type="textarea">
 												<textarea data-gramm_editor="false" name="comments-1-per-line" id="form02-comments-1-per-line" placeholder="Comments (1 per line)" required></textarea>
